--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "get-hk-district-councils-members",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "main.js",
   "dependencies": {
     "jquery": "^3.2.0",
     "jsdom": "^9.12.0",
     "node-fetch": "^1.6.3",
-    "sleep": "^5.1.0"
+    "progress": "^1.1.8"
   },
   "devDependencies": {},
   "scripts": {
